feat(server): 7807/9457 compliant error middleware, clean up index
